Adds docs references

--- a/index.html
+++ b/index.html
@@ -109,8 +109,16 @@ and
   -v /branding/ios.png:/usr/share/nginx/html/icon_180x180.png \¬
   signalen/frontend¬
 </code></pre>
-<h2>
-<a id="docs" class="anchor" href="#docs" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Docs</h2>
+<h2>Docs</h2>
+<ul>
+  <li>
+    <a class="anchor" href="./docs/adr" aria-hidden="true">ADRs</a>
+  </li>
+  <li>
+    <a class="anchor" href="./docs/schemas" aria-hidden="true">Schemas</a>
+  </li>
+</ul>
+
 <p><a href="https://amsterdam.github.io/signals-frontend/docs/adr">Architectural decision records</a></p>
       </section>
       <footer>
@@ -119,6 +127,6 @@ and
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+
   </body>
 </html>
